Add NP Chunking to Part-3

--- a/Part-02-B.ipynb
+++ b/Part-02-B.ipynb
@@ -30,11 +30,17 @@
     "\n",
     "Before I begin, we need to pay our homage to the legendary [Peter Norvig's Spell Correct](https://norvig.com/spell-correct.html). It's stil worth a read on how to _think_ about solving a problem and _exploring_ implementations. Even the way he refactors his code and writes functions is educational. \n",
     "\n",
-    "His spell correction module is not the simplest or best way. I recommend two packages: one with a bias towards simplicity, one with a bias towards giving you all the knives, bells and whistles to try:\n",
+    "**For the theory behind these methods**: The logical ordering of this section mirror's that of [Spell Correction Chapter in Dan Jurafky's SLP Book](https://web.stanford.edu/~jurafsky/slp3/5.pdf). While he has a strong academic and math bent, this is biased towards practical implementations and code examples. This is basically a practitioner's translation of that academic work. \n",
+    "\n",
+    "Programmer's Notes: \n",
+    "\n",
+    "Norvig's spell correction module is not the simplest or best way. I recommend two packages: one with a bias towards simplicity, one with a bias towards giving you all the knives, bells and whistles to try:\n",
     "\n",
     "**[FuzzyWuzzy](https://github.com/seatgeek/fuzzywuzzy)** is easy to use. It gives a simple similarity score between two strings, capped to 100. Higher numbers mean the words are more similar. \n",
     "\n",
     "**[Jellyfish](https://github.com/jamesturk/jellyfish)** supports 6 edit distance functions and 4 phonetic encoding options which you can use as per your use case. \n",
+    "\n",
+    "Do not use the autocorrect package from pip. It has not been maintained for almost 2 years now and tends to \"overcorrect\" words i.e. replace rare but correct words with more frequently seen wrong words. Leading to the famous 'damn you autocorrect' phrase. \n",
     "\n",
     "## FuzzyWuzzy\n",
     "\n",
@@ -52,7 +58,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# import sys\n",
@@ -69,7 +77,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from fuzzywuzzy import fuzz"
@@ -350,7 +360,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# import sys\n",
@@ -382,7 +394,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def calculate_distance(function, examples=examples):\n",
@@ -783,7 +797,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# import sys\n",
