formatting and typo fixes

--- a/Part-03.ipynb
+++ b/Part-03.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -99,8 +99,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part of Speech Tags\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -110,14 +118,14 @@
     "assertion_ex = 'I make an order by mistake. I won’t pay.'\n",
     "specific_qex = 'Can I use paypal for order #123?'\n",
     "when_q_ex = 'When can I get my cashback?'\n",
-    "spelling_ex = 'My orrder number is #123. How can I pay?'\n",
+    "spelling_ex = 'My order number is #123. How can I pay?'\n",
     "\n",
     "examples = [how_q_ex, assertion_ex, specific_qex, when_q_ex, spelling_ex]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -153,8 +161,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a wealth of detail in a single pipeline output. For instance, in the above example notice how spaCy assigns a Part-of-Speech tag to every token. These tags can be passed to your pipeline as a feature too, depending on the use case. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -329,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +375,7 @@
    ],
    "source": [
     "for chunk in doc.noun_chunks:\n",
-    "    print(f'{chunk.text:<30},{chunk.root.text:<15},{chunk.root.dep_:<7},{spacy.explain(chunk.root.dep_):25},\\{chunk.root.head.text:<15}')"
+    "    print(f'{chunk.text:<30},{chunk.root.text:<15},{chunk.root.dep_:<7},{spacy.explain(chunk.root.dep_):25},{chunk.root.head.text:<15}')"
    ]
   }
  ],
