--- a/Part-04.ipynb
+++ b/Part-04.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Text Representations: Words to Numbers\n",
-    "\n",
-    "20 Pages\n",
+    "Text Representations: Words to Numbers\n",
     "---\n",
     "\n",
     "Computers today can not act on words or text directly. They need to be represented by meaningful number sequences. These long sequences of decimal numbers are called vectors. \n",
@@ -27,14 +25,12 @@
     "\n",
     "Level: ADVANCED \n",
     "\n",
-    "Main Headings : (3-5 main chapter headings) (What technical topics will the reader learn about during this chapter?\n",
-    "- HEADING 1: Introduction\n",
-    "- HEADING 2: Introducing gensim and gensim-data\n",
-    "- HEADING 3: word2vec, GloVe and modern: ConceptNet-Numberbatch and fastText\n",
-    "- HEADING 4: Beyond Word Vectors\n",
-    "- HEADING 5: Integrating with Text Classification\n",
+    "- Introducing gensim and gensim-data\n",
+    "- word2vec, GloVe and modern: ConceptNet-Numberbatch and fastText\n",
+    "- Understanding Word Vectors\n",
+    "- Integrating with Text Classification\n",
     "\n",
-    "Skills learned: For each heading, insert what the reader will learn to DO in this chapter?\n",
+    "What will you be able to do by end of it? \n",
     "- SKILL 1: Vectorization of Text\n",
     "- SKILL 2: Using gensim and gensim-data for topic modeling\n",
     "- SKILL 3: Using word2vec, GloVe and fastText \n",
@@ -45,7 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import spacy\n",
@@ -62,21 +60,114 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading channels: ...working... done\n",
+      "Name                       Version                   Build  Channel        \n",
+      "gensim                     0.10.0               np18py26_0  defaults       \n",
+      "gensim                     0.10.0               np18py27_0  defaults       \n",
+      "gensim                     0.10.0               np18py33_0  defaults       \n",
+      "gensim                     0.10.0               np18py34_0  defaults       \n",
+      "gensim                     0.10.0               np19py26_0  defaults       \n",
+      "gensim                     0.10.0               np19py27_0  defaults       \n",
+      "gensim                     0.10.0               np19py33_0  defaults       \n",
+      "gensim                     0.10.0               np19py34_0  defaults       \n",
+      "gensim                     0.10.2               np19py26_0  defaults       \n",
+      "gensim                     0.10.2               np19py27_0  defaults       \n",
+      "gensim                     0.10.2               np19py33_0  defaults       \n",
+      "gensim                     0.10.2               np19py34_0  defaults       \n",
+      "gensim                     0.10.3               np19py26_0  defaults       \n",
+      "gensim                     0.10.3               np19py27_0  defaults       \n",
+      "gensim                     0.10.3               np19py33_0  defaults       \n",
+      "gensim                     0.10.3               np19py34_0  defaults       \n",
+      "gensim                     0.12.1               np19py27_0  defaults       \n",
+      "gensim                     0.12.2              np110py27_0  defaults       \n",
+      "gensim                     0.12.2              np110py34_0  defaults       \n",
+      "gensim                     0.12.2              np110py35_0  defaults       \n",
+      "gensim                     0.12.2               np19py27_0  defaults       \n",
+      "gensim                     0.12.4              np110py27_0  defaults       \n",
+      "gensim                     0.12.4              np110py34_0  defaults       \n",
+      "gensim                     0.12.4              np110py35_0  defaults       \n",
+      "gensim                     0.12.4              np111py27_0  defaults       \n",
+      "gensim                     0.12.4              np111py34_0  defaults       \n",
+      "gensim                     0.12.4              np111py35_0  defaults       \n",
+      "gensim                     0.13.3              np111py27_0  defaults       \n",
+      "gensim                     0.13.3              np111py34_0  defaults       \n",
+      "gensim                     0.13.3              np111py35_0  defaults       \n",
+      "gensim                     0.13.4              np111py27_0  defaults       \n",
+      "gensim                     0.13.4              np111py34_0  defaults       \n",
+      "gensim                     0.13.4              np111py35_0  defaults       \n",
+      "gensim                     0.13.4              np111py36_0  defaults       \n",
+      "gensim                     0.13.4.1            np111py27_0  defaults       \n",
+      "gensim                     0.13.4.1            np111py34_0  defaults       \n",
+      "gensim                     0.13.4.1            np111py35_0  defaults       \n",
+      "gensim                     0.13.4.1            np111py36_0  defaults       \n",
+      "gensim                     0.13.4.1            np112py27_0  defaults       \n",
+      "gensim                     0.13.4.1            np112py35_0  defaults       \n",
+      "gensim                     0.13.4.1            np112py36_0  defaults       \n",
+      "gensim                     1.0.1               np111py27_0  defaults       \n",
+      "gensim                     1.0.1               np111py35_0  defaults       \n",
+      "gensim                     1.0.1               np111py36_0  defaults       \n",
+      "gensim                     1.0.1               np112py27_0  defaults       \n",
+      "gensim                     1.0.1               np112py35_0  defaults       \n",
+      "gensim                     1.0.1               np112py36_0  defaults       \n",
+      "gensim                     1.0.1               np113py27_0  defaults       \n",
+      "gensim                     1.0.1               np113py35_0  defaults       \n",
+      "gensim                     1.0.1               np113py36_0  defaults       \n",
+      "gensim                     2.1.0               np112py27_0  defaults       \n",
+      "gensim                     2.1.0               np112py35_0  defaults       \n",
+      "gensim                     2.1.0               np112py36_0  defaults       \n",
+      "gensim                     2.1.0               np113py27_0  defaults       \n",
+      "gensim                     2.1.0               np113py35_0  defaults       \n",
+      "gensim                     2.1.0               np113py36_0  defaults       \n",
+      "gensim                     2.2.0               np112py27_0  defaults       \n",
+      "gensim                     2.2.0               np112py35_0  defaults       \n",
+      "gensim                     2.2.0               np112py36_0  defaults       \n",
+      "gensim                     2.2.0               np113py27_0  defaults       \n",
+      "gensim                     2.2.0               np113py35_0  defaults       \n",
+      "gensim                     2.2.0               np113py36_0  defaults       \n",
+      "gensim                     2.3.0               np112py27_0  defaults       \n",
+      "gensim                     2.3.0               np112py35_0  defaults       \n",
+      "gensim                     2.3.0               np112py36_0  defaults       \n",
+      "gensim                     2.3.0               np113py27_0  defaults       \n",
+      "gensim                     2.3.0               np113py35_0  defaults       \n",
+      "gensim                     2.3.0               np113py36_0  defaults       \n",
+      "gensim                     3.0.1           py27_vc9h9787f6f_0  defaults       \n",
+      "gensim                     3.0.1           py35_vc14hf5afb6f_0  defaults       \n",
+      "gensim                     3.0.1           py36_vc14hb0e632d_0  defaults       \n",
+      "gensim                     3.1.0           py27_vc9hda3ffb8_0  defaults       \n",
+      "gensim                     3.1.0           py35_vc14hae8a451_0  defaults       \n",
+      "gensim                     3.1.0           py36_vc14h29988f6_0  defaults       \n",
+      "gensim                     3.3.0            py27hc997a72_0  defaults       \n",
+      "gensim                     3.3.0            py35h452e1ab_0  defaults       \n",
+      "gensim                     3.3.0            py36h452e1ab_0  defaults       \n",
+      "gensim                     3.4.0            py27hc997a72_0  defaults       \n",
+      "gensim                     3.4.0            py35h452e1ab_0  defaults       \n",
+      "gensim                     3.4.0            py36h452e1ab_0  defaults       \n"
+     ]
+    }
+   ],
+   "source": [
+    "!conda search gensim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
