Add Part-07 Template Notebook

--- a/Part-03.ipynb
+++ b/Part-03.ipynb
@@ -133,18 +133,18 @@
      "output_type": "stream",
      "text": [
       "text\t|lemma\t|postag\t|tag\t|tag_explain\t\t\t\t   |dep_parser\t   |dep_explain\t\t|stop_word\n",
-      "I       |-PRON- |PRON   |PRP    |pronoun, personal                         |nsubj          |nominal subject          |0      \n",
-      "make    |make   |VERB   |VBP    |verb, non-3rd person singular present     |ROOT           |None                     |1      \n",
-      "an      |an     |DET    |DT     |determiner                                |det            |determiner               |1      \n",
-      "order   |order  |NOUN   |NN     |noun, singular or mass                    |dobj           |direct object            |0      \n",
-      "by      |by     |ADP    |IN     |conjunction, subordinating or preposition |prep           |prepositional modifier   |1      \n",
-      "mistake |mistake|NOUN   |NN     |noun, singular or mass                    |pobj           |object of preposition    |0      \n",
-      ".       |.      |PUNCT  |.      |punctuation mark, sentence closer         |punct          |punctuation              |0      \n",
-      "I       |-PRON- |PRON   |PRP    |pronoun, personal                         |nsubj          |nominal subject          |0      \n",
-      "wo      |will   |VERB   |MD     |verb, modal auxiliary                     |aux            |auxiliary                |0      \n",
-      "n’t     |not    |ADV    |RB     |adverb                                    |neg            |negation modifier        |0      \n",
-      "pay     |pay    |VERB   |VB     |verb, base form                           |ROOT           |None                     |0      \n",
-      ".       |.      |PUNCT  |.      |punctuation mark, sentence closer         |punct          |punctuation              |0      \n"
+      "I       |-PRON- |PRON   |PRP    |pronoun, personal                         |nsubj          |nominal subject          \n",
+      "make    |make   |VERB   |VBP    |verb, non-3rd person singular present     |ROOT           |None                     \n",
+      "an      |an     |DET    |DT     |determiner                                |det            |determiner               \n",
+      "order   |order  |NOUN   |NN     |noun, singular or mass                    |dobj           |direct object            \n",
+      "by      |by     |ADP    |IN     |conjunction, subordinating or preposition |prep           |prepositional modifier   \n",
+      "mistake |mistake|NOUN   |NN     |noun, singular or mass                    |pobj           |object of preposition    \n",
+      ".       |.      |PUNCT  |.      |punctuation mark, sentence closer         |punct          |punctuation              \n",
+      "I       |-PRON- |PRON   |PRP    |pronoun, personal                         |nsubj          |nominal subject          \n",
+      "wo      |will   |VERB   |MD     |verb, modal auxiliary                     |aux            |auxiliary                \n",
+      "n’t     |not    |ADV    |RB     |adverb                                    |neg            |negation modifier        \n",
+      "pay     |pay    |VERB   |VB     |verb, base form                           |ROOT           |None                     \n",
+      ".       |.      |PUNCT  |.      |punctuation mark, sentence closer         |punct          |punctuation              \n"
      ]
     }
    ],
@@ -157,14 +157,22 @@
     "        dep_explain = 'None'\n",
     "    \n",
     "    tag_explain = spacy.explain(token.tag_)   \n",
-    "    print(f'{token.text:<8}|{token.lemma_:<7}|{token.pos_:<7}|{token.tag_:<7}|{tag_explain:42}|{token.dep_:15}|{dep_explain:<25}|{token.is_stop:<7}')"
+    "    print(f'{token.text:<8}|{token.lemma_:<7}|{token.pos_:<7}|{token.tag_:<7}|{tag_explain:42}|{token.dep_:15}|{dep_explain:<25}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a wealth of detail in a single pipeline output. For instance, in the above example notice how spaCy assigns a Part-of-Speech tag to every token. These tags can be passed to your pipeline as a feature too, depending on the use case. "
+    "There is a wealth of detail in a single pipeline output. For instance, in the above example notice how spaCy assigns a Part-of-Speech tag to every token. These tags can be passed to your tasks later in the pipeline as a feature too, depending on the use case. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dependency Parsing\n",
+    "\n"
    ]
   },
   {
@@ -345,7 +353,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nlp = spacy.load('en')\n",
@@ -354,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
