WIP Part-5 Read data into lists

--- a/Part-05.ipynb
+++ b/Part-05.ipynb
@@ -143,7 +143,76 @@
     "|- unsup\n",
     "```\n",
     "\n",
-    "The pos and neg folders contain reviews which are positive and negative respectively. The `unsup` folder stands for unsupervised. They are useful for building language models, specially for Deep Learning. We will not use that here. Similarly, all is redundant because these reviews are repeated in pos and neg folders. "
+    "The pos and neg folders contain reviews which are positive and negative respectively. The `unsup` folder stands for unsupervised. They are useful for building language models, specially for Deep Learning. We will not use that here. Similarly, the folder `all` is redundant because these reviews are repeated in pos and neg folders. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Read data into separate dataframes/strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/c/Users/nirantk/Dropbox/nlp-python-deep-learning\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = Path('./data')/'imdb'/'aclImdb'\n",
+    "train_path = data_path/'train'\n",
+    "test_path = data_path/'test'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data(dir_path=train_path):\n",
+    "    \n",
+    "    def load_dir_reviews(reviews_path):    \n",
+    "        files_list = list(reviews_path.iterdir())\n",
+    "        reviews = []\n",
+    "        for filename in files_list:\n",
+    "            f = open(filename, 'r', encoding='utf-8')\n",
+    "            reviews.append(f.read())\n",
+    "        return reviews\n",
+    "    \n",
+    "    pos_path = dir_path/'pos'\n",
+    "    neg_path = dir_path/'neg'\n",
+    "    pos_reviews, neg_reviews = load_dir_reviews(pos_path), load_dir_reviews(neg_path)\n",
+    "    return(pos_reviews, neg_reviews)\n",
+    "\n",
+    "pos_reviews, neg_reviews = load_data()\n",
+    "# print(pos_reviews[:6], neg_reviews[5:10])"
    ]
   },
   {
@@ -152,6 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import spacy\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer"
