Add LogisticRegression+Pipeline example

--- a/Part-05.ipynb
+++ b/Part-05.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,18 @@
     "from urllib.request import urlretrieve\n",
     "from tqdm import tqdm\n",
     "import os\n",
+    "import numpy as np\n",
     "# if you are using the fastAI environment, all of these imports work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -155,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,16 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,11 +194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_data(dir_path=train_path):\n",
+    "def load_data(dir_path):\n",
     "    \n",
     "    def load_dir_reviews(reviews_path):    \n",
     "        files_list = list(reviews_path.iterdir())\n",
@@ -204,24 +206,66 @@
     "        for filename in files_list:\n",
     "            f = open(filename, 'r', encoding='utf-8')\n",
     "            reviews.append(f.read())\n",
-    "        return reviews\n",
+    "        return pd.DataFrame({'text':reviews})\n",
+    "        \n",
     "    \n",
     "    pos_path = dir_path/'pos'\n",
     "    neg_path = dir_path/'neg'\n",
     "    pos_reviews, neg_reviews = load_dir_reviews(pos_path), load_dir_reviews(neg_path)\n",
-    "    return(pos_reviews, neg_reviews)\n",
+    "    pos_reviews['label'] = 1\n",
+    "    neg_reviews['label'] = 0\n",
+    "    merged = pd.concat([pos_reviews, neg_reviews])\n",
+    "    merged.reset_index(inplace=True)\n",
+    "    return merged\n",
     "\n",
-    "pos_reviews, neg_reviews = load_data()\n",
+    "train = load_data(train_path)\n",
     "# print(pos_reviews[:6], neg_reviews[5:10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "test = load_data(test_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    25000.00000\n",
+       "mean         0.50000\n",
+       "std          0.50001\n",
+       "min          0.00000\n",
+       "25%          0.00000\n",
+       "50%          0.50000\n",
+       "75%          1.00000\n",
+       "max          1.00000\n",
+       "Name: label, dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test['label'][5]\n",
+    "test['label'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import spacy\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer"
@@ -234,9 +278,84 @@
    },
    "source": [
     "## Logistic Regression\n",
-    "The simplest\n",
-    "notes to self\n",
-    "- what is the feature extractor? TF-IDF? Bag of words"
+    "The simplest of all, we replicate the exact steps which we saw from Chapter 01. \n",
+    "\n",
+    "Feature Extraction: \n",
+    "- Bag of Words\n",
+    "- TF-IDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression as LR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_clf = Pipeline([('vect', CountVectorizer()), ('tfidf', TfidfTransformer()), ('clf',LR())])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('vect', CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "        dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+       "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "        ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
+       "        strip...ty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False))])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr_clf.fit(X=train['text'], y=train['label'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_predicted = lr_clf.predict(test['text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.88316"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(lr_predicted == test['label'])/len(lr_predicted)"
    ]
   },
   {
@@ -265,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
